@@ -1,16 +1,20 @@
 plugins {
     id 'pl.allegro.tech.build.axion-release' version '1.14.2'
     id 'groovy'
-
+    id 'maven-publish'
 }
-ext.rundeckVersion='5.14.0-rc1-20250722'
+
+group = 'com.github.rundeck-plugins'
+
+ext.rundeckVersion='6.0.0-SNAPSHOT'
 defaultTasks 'clean','build'
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'pl.allegro.tech.build.axion-release'
 apply plugin: 'groovy'
 
-sourceCompatibility = 11
+sourceCompatibility = 17
+targetCompatibility = 17
 ext.rundeckPluginVersion= '1.2'
 
 /**
@@ -28,8 +32,11 @@ scmVersion {
     }
 }
 project.version = scmVersion.version
+// Override version for Grails 7 upgrade (bump to 1.3.17)
+project.version = '1.3.17-grails7-upgrade-test'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
@@ -66,9 +73,9 @@ dependencies {
             [group: 'org.objenesis', name: 'objenesis', version: '3.2']
 
     )
-    testImplementation "org.codehaus.groovy:groovy-all:2.4.15"
-    testImplementation "org.spockframework:spock-core:1.0-groovy-2.4"
-    testImplementation "cglib:cglib-nodep:2.2.2"
+    testImplementation "org.apache.groovy:groovy-all:4.0.29"
+    testImplementation "org.spockframework:spock-core:2.4-groovy-4.0"
+    testImplementation "cglib:cglib-nodep:3.3.0"
 
 }
 
@@ -110,3 +117,24 @@ jar {
 }
 //set jar task to depend on copyToLib
 jar.dependsOn(copyToLib)
+
+test {
+    useJUnitPlatform()
+    
+    // Java 17+ module access
+    jvmArgs = [
+        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+        '--add-opens=java.base/java.util=ALL-UNNAMED',
+        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+    ]
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.github.rundeck-plugins'
+            artifactId = 'vault-storage'
+            from components.java
+        }
+    }
+}
